--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "astro": "^4.6.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@iconify-json/carbon": "^1.1.31",
+    "astro-icon": "^1.1.0"
   }
 }
