--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@iconify-json/bi": "^1.1.23",
     "@iconify-json/carbon": "^1.1.31",
     "astro-icon": "^1.1.0"
   }
