--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@iconify-json/bi": "^1.1.23",
     "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/mdi": "^1.1.66",
     "astro-icon": "^1.1.0"
   }
 }
